--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="imperial_eventos_windows">
+  <meta name="apple-mobile-web-app-title" content="Imperial Eventos">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>imperial_eventos_windows</title>
+  <title>Imperial Eventos</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
