--- a/policy.html
+++ b/policy.html
@@ -70,7 +70,7 @@
 
                     <hr />
 
-                    <img src="../images/imperial.png" height="140" alt="Ame English">
+                    <img src="assets/assets/app_images/logo_amber.png" height="140" alt="Ame English">
 
                     <h1 style="background-color: rgb(153, 138, 7);">Política de Privacidade</h1>
                     <hr style="color: gray;">
