--- a/policy.html
+++ b/policy.html
@@ -1,231 +1,248 @@
+<!-- policy.html -->
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="">
-     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Imperial Eventos | Política de Privacidade</title>
+  <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
 
-     <title>Imperial Eventos | Política de Privacidade</title>
-     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-     <link rel="stylesheet" href="../css/bootstrap.min.css">
-     <link rel="stylesheet" href="../css/animate.css">
-     <link rel="stylesheet" href="../css/font-awesome.min.css">
+  <style>
+    :root{
+      --brand: rgb(153, 138, 7);
+      --text: rgb(18, 49, 6);
+      --muted: #7a7a7a;
+      --bg: #ffffff;
+      --card: #ffffff;
+      --border: #e6e6e6;
+    }
 
-     <link rel="stylesheet" href="../css/magnific-popup.css">
+    *{ box-sizing: border-box; }
+    html, body{ height: 100%; }
+    body{
+      margin: 0;
+      background: var(--bg);
+      color: var(--text);
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      line-height: 1.5;
+    }
 
-     <link rel="stylesheet" href="../css/owl.theme.css">
-     <link rel="stylesheet" href="../css/owl.carousel.css">
+    /* Top bar */
+    .topbar{
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      background: var(--brand);
+      height: 68px;
+      display: flex;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,.10);
+    }
+    .topbar-inner{
+      width: 100%;
+      max-width: 980px;
+      margin: 0 auto;
+      padding: 0 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    /* (mantém o topo simples; o logo fica no conteúdo, como no original) */
 
-     <link href='https://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
-     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700' rel='stylesheet' type='text/css'>
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-     <!-- Main css -->
-     <link rel="stylesheet" href="../css/style.css">
+    /* Page container */
+    .wrap{
+      max-width: 980px;
+      margin: 0 auto;
+      padding: 20px 16px 32px;
+    }
 
+    .card{
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 14px;
+      padding: 22px;
+    }
+
+    .header{
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 12px;
+      justify-items: center;
+      text-align: center;
+      padding-bottom: 14px;
+      border-bottom: 1px solid var(--border);
+      margin-bottom: 18px;
+    }
+
+    .logo{
+      height: 140px;
+      width: auto;
+      display: block;
+    }
+
+    .title{
+      width: 100%;
+      margin: 0;
+      padding: 14px 12px;
+      background: var(--brand);
+      color: #ffffff;
+      border-radius: 12px;
+      font-size: 28px;
+      letter-spacing: .2px;
+    }
+
+    .intro{
+      margin: 0;
+      color: var(--text);
+      text-align: start;
+      font-size: 15.5px;
+    }
+
+    .section{
+      margin-top: 18px;
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      overflow: hidden;
+    }
+
+    .section-title{
+      margin: 0;
+      padding: 10px 12px;
+      background: var(--brand);
+      color: #ffffff;
+      font-weight: 700;
+      font-size: 15px;
+      text-align: start;
+    }
+
+    .section-body{
+      padding: 12px 12px 6px;
+      text-align: start;
+      color: var(--text);
+      background: #fff;
+    }
+
+    .section-body p{
+      margin: 0 0 10px 0;
+      color: var(--text);
+      font-size: 15px;
+    }
+
+    /* Footer */
+    footer{
+      background: var(--brand);
+      color: #fff;
+      text-align: center;
+      padding: 18px 16px;
+      margin-top: 22px;
+    }
+    footer p{
+      margin: 0;
+      font-size: 14px;
+      color: #fff;
+    }
+
+    /* Small screens */
+    @media (max-width: 520px){
+      .title{ font-size: 22px; }
+      .card{ padding: 16px; }
+      .logo{ height: 120px; }
+    }
+  </style>
 </head>
 
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50" style="background-color: white;">
-
-
-
-
-     <!-- Navigation Section -->
-
-     <div class="navbar navbar-header   navbar-fixed-top" style="background-color: rgb(153, 138, 7);">
-          <div class="container">
-
-               <div class="navbar-header">
-                    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                    </button>
-                    <div class="row text-center" style="align-content: center; padding: 1em;">
-
-                         <!-- <img src="../images/imperial.png" height="80" alt="Imperial Eventos"> -->
-
-                    </div>
-
-               </div>
-
-
-          </div>
-     </div>
-
-
-
-     <div class="container" style="padding-top: 20px;">
-
-
-          <div class="col-md-12 col-sm-12">
-
-
-               <div class="section-title">
-
-                    <hr />
-
-                    <img src="../imperialeventos.github.io/assets/assets/app_images/logo_amber.png" height="140" alt="Imperial Eventos">
-
-                    <h1 style="background-color: rgb(153, 138, 7);">Política de Privacidade</h1>
-                    <hr style="color: gray;">
-                    <p style="color: rgb(18, 49, 6); text-align: start;">A Imperial Eventos procura, através deste
-                         aplicativo, proporcionar maior comidade para seus clientes. No
-                         entanto, é essencial informar aos usuários sobre o uso de seus dados pessoais. Por isso,
-                         recomendamos que você leia cuidadosamente os seguintes pontos desta política para compreender
-                         melhor como suas informações serão utilizadas no aplicativo Imperial Eventos.</p>
-
-                    <p style="color: white; text-align: start; background-color: rgb(153, 138, 7);padding: 10px;">
-
-                         1. OBTENÇÃO DE INFORMAÇÕES
-                    </p>
-
-                    <p style="color: rgb(18, 49, 6); text-align: start;">
-
-                         1.1 Credenciais de acesso: O aplicativo Imperial Eventos armazena localmente as credenciais do usuário somento para
-                         possibilitar  o acesso com mais fluidez. Essas credenciais incluem um identificador único e uma
-                         senha criptografada. As informações de acesso são mantidas estritamente confidenciais e não são
-                         compartilhadas com terceiros.
-
-                    </p>
-
-                    <p style="color: rgb(18, 49, 6); text-align: start;">
-
-                         1.2 Dados locais:  Tais dados são exclusivamente utilizados para fins de autenticação e não são acessíveis ou
-                         compartilhados com terceiros.
-
-
-
-                    </p>
-
-
-
-                    <p style="color: white; text-align: start; background-color: rgb(153, 138, 7); padding: 10px;">
-                         2. UTILIZAÇÃO DAS INFORMAÇÕES
-
-
-                    </p>
-
-                    <p style="color: rgb(18, 49, 6); text-align: start;">
-
-                         2.1 Autenticação do usuário: As informações de acesso coletadas são empregadas para permitir o
-                         uso seguro e conveniente do aplicativo da Imperial Eventos. Elas são criptografadas e armazenadas de forma segura
-                         em nossos servidores.
-
-
-
-
-                    </p>
-
-            
-
-                    <p style="color: rgb(18, 49, 6); text-align: start;">
-
-
-                         2.2 Aprimoramento do serviço: Podemos usar informações de uso do aplicativo de maneira agregada
-                         e anonimizada para análises visando melhorar a qualidade e funcionalidade do aplicativo  da Imperial Eventos. Tais dados não permitem a identificação individual dos usuários.
-
-
-
-                    </p>
-
-                    <p style="color: white; text-align: start; background-color: rgb(153, 138, 7); padding: 10px;">
-                         3. COMPARTILHAMENTO DE INFORMAÇẼOS
-
-
-                    </p>
-
-                    <p style="color: rgb(18, 49, 6); text-align: start;">
-
-
-                         3.1 Não compartilhamento com terceiros: A Imperial Eventos não compartilha suas informações pessoais
-                         com terceiros, a menos que seja estritamente necessário para cumprir obrigações legais ou a
-                         pedido do próprio usuário.
-
-
-
-                    </p>
-                    <p style="color: white; text-align: start; background-color: rgb(153, 138, 7); padding: 10px;">
-                         3. SEGURANÇA DAS INFORMAÇẼOS
-
-
-                    </p>
-
-                    <p style="color: rgb(18, 49, 6); text-align: start;">
-
-
-                         4.1 Medidas de segurança: Adotamos medidas de segurança adequadas para proteger suas
-                         informações contra acesso não autorizado, alteração, divulgação ou destruição. Utilizamos
-                         tecnologias como criptografia, firewalls, entre outras, para garantir a segurança dos dados
-                         coletados.
-
-
-
-                    </p>
-
-
-                    <p style="color: white; text-align: start; background-color: rgb(153, 138, 7); padding: 10px;">
-
-                         4. ATUALIZAÇÃO DA POLÍTICA
-
-
-                    </p>
-
-                    <p style="color: rgb(18, 49, 6); text-align: start;">
-
-                         Esta política pode ser atualizada periodicamente, e quaisquer mudanças serão comunicadas aos
-                         usuários. Portanto, é aconselhável consultar este documento regularmente para estar ciente de
-                         eventuais alterações.
-
-                    </p>
-
-               </div>
-          </div>
-
-     </div>
-
-     <footer style="background-color: rgb(153, 138, 7); text-align: center">
-          <div class="container">
-               <div class="row">
-
-                    <div class="col-md-12 col-sm-6 ">
-                         <div class="wow fadeInUp footer-copyright " data-wow-delay="0.4s">
-                              <p style="color: white;">Copyright &copy; 2024 Vintesys | Aplicativos Personalizados
-                              </p>
-                         </div>
-                    </div>
-
-
-
-               </div>
-          </div>
-     </footer>
-
-
-
-
-     <!-- SCRIPTS -->
-
-     <script src="js/jquery.js"></script>
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/jquery.magnific-popup.min.js"></script>
-     <script src="js/magnific-popup-options.js"></script>
-     <script src="js/owl.carousel.min.js"></script>
-     <script src="js/smoothscroll.js"></script>
-     <script
-          src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.3/jquery.inputmask.bundle.min.js"></script>
-     <script src="js/wow.min.js"></script>
-     <script src="js/custom.js"></script>
-
-
+<body>
+  <header class="topbar" role="banner" aria-label="Barra superior"></header>
+
+  <main class="wrap" role="main">
+    <article class="card" aria-label="Política de Privacidade - Imperial Eventos">
+      <header class="header">
+        <img
+          class="logo"
+          src="../imperialeventos.github.io/assets/assets/app_images/logo_amber.png"
+          alt="Imperial Eventos"
+        />
+        <h1 class="title">Política de Privacidade</h1>
+
+        <p class="intro">
+          A Imperial Eventos procura, através deste aplicativo, proporcionar maior comidade para seus clientes. No
+          entanto, é essencial informar aos usuários sobre o uso de seus dados pessoais. Por isso,
+          recomendamos que você leia cuidadosamente os seguintes pontos desta política para compreender
+          melhor como suas informações serão utilizadas no aplicativo Imperial Eventos.
+        </p>
+      </header>
+
+      <section class="section" aria-label="1. Obtenção de informações">
+        <h2 class="section-title">1. OBTENÇÃO DE INFORMAÇÕES</h2>
+        <div class="section-body">
+          <p>
+            1.1 Credenciais de acesso: O aplicativo Imperial Eventos armazena localmente as credenciais do usuário somento para
+            possibilitar  o acesso com mais fluidez. Essas credenciais incluem um identificador único e uma
+            senha criptografada. As informações de acesso são mantidas estritamente confidenciais e não são
+            compartilhadas com terceiros.
+          </p>
+          <p>
+            1.2 Dados locais:  Tais dados são exclusivamente utilizados para fins de autenticação e não são acessíveis ou
+            compartilhados com terceiros.
+          </p>
+        </div>
+      </section>
+
+      <section class="section" aria-label="2. Utilização das informações">
+        <h2 class="section-title">2. UTILIZAÇÃO DAS INFORMAÇÕES</h2>
+        <div class="section-body">
+          <p>
+            2.1 Autenticação do usuário: As informações de acesso coletadas são empregadas para permitir o
+            uso seguro e conveniente do aplicativo da Imperial Eventos. Elas são criptografadas e armazenadas de forma segura
+            em nossos servidores.
+          </p>
+          <p>
+            2.2 Aprimoramento do serviço: Podemos usar informações de uso do aplicativo de maneira agregada
+            e anonimizada para análises visando melhorar a qualidade e funcionalidade do aplicativo  da Imperial Eventos. Tais dados não permitem a identificação individual dos usuários.
+          </p>
+        </div>
+      </section>
+
+      <section class="section" aria-label="3. Compartilhamento de informações">
+        <h2 class="section-title">3. COMPARTILHAMENTO DE INFORMAÇẼOS</h2>
+        <div class="section-body">
+          <p>
+            3.1 Não compartilhamento com terceiros: A Imperial Eventos não compartilha suas informações pessoais
+            com terceiros, a menos que seja estritamente necessário para cumprir obrigações legais ou a
+            pedido do próprio usuário.
+          </p>
+        </div>
+      </section>
+
+      <section class="section" aria-label="3. Segurança das informações">
+        <h2 class="section-title">3. SEGURANÇA DAS INFORMAÇẼOS</h2>
+        <div class="section-body">
+          <p>
+            4.1 Medidas de segurança: Adotamos medidas de segurança adequadas para proteger suas
+            informações contra acesso não autorizado, alteração, divulgação ou destruição. Utilizamos
+            tecnologias como criptografia, firewalls, entre outras, para garantir a segurança dos dados
+            coletados.
+          </p>
+        </div>
+      </section>
+
+      <section class="section" aria-label="4. Atualização da política">
+        <h2 class="section-title">4. ATUALIZAÇÃO DA POLÍTICA</h2>
+        <div class="section-body">
+          <p>
+            Esta política pode ser atualizada periodicamente, e quaisquer mudanças serão comunicadas aos
+            usuários. Portanto, é aconselhável consultar este documento regularmente para estar ciente de
+            eventuais alterações.
+          </p>
+        </div>
+      </section>
+    </article>
+
+    <footer role="contentinfo">
+      <p>Copyright &copy; 2025 Imperial Eventos e Negócios</p>
+    </footer>
+  </main>
 </body>
-
-
-
-
 </html>
